# WorthIt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  tests.sh
files/: index.html
src/: index.html  lib.rs  main.rs
src/files/: index.html
src/tests/: rocketTests.rs
src/testsBin/: mod.rs  rocketTests.rs
src/testsLib/: mod.rs  worthItFunctionsTests.rs
