[package]
name = "worthIt"
version = "3.0.0"
authors = ["Dan Eves <daneves85@googlemail.com>"]
description = "Cost And Profitability Calculator For Devil's Pantry Events."
homepage = ""
repository = "https://github.com/Get-Cookin/WorthIt"
readme = "README.md"
keywords = ["finance", "calculator"]
categories = ["web-programming::http-server"]
license = "AGPL-3.0"

[dependencies]
rocket = { version = "0.3.8", optional = true }
rocket_codegen = { version = "0.3.8", optional = true }

[features]
buildBin = ["rocket", "rocket_codegen"]

[lib]
name = "worthItFunctionsLarge"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "worthItServer"
path = "src/main.rs"
required-features = ["buildBin"]

[profile.dev]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true